# Bachelorarbeit_RM

./: .gitignore  CMakeLists.txt  README.md  application_simulator.cpp  application_simulator.hpp  main.cpp  shm.cpp  shm.hpp  shm_api.cpp  shm_api.hpp  timer.cpp  udp_buffer.hpp  udp_receiver.cpp  udp_sender.cpp
docs/: classdiagram.puml  classdiagram_klein.puml  squence.puml  squence_messungen.puml  squence_receive.puml  squence_send.puml
src/: main.cpp
src/api/: rm_api.cpp  rm_api.h  rm_api.hpp  rm_api_private.cpp  rm_api_private.h  rm_api_private.hpp  shm_api.cpp  shm_api.hpp
src/application_simulator/: application_simulator.cpp  application_simulator.hpp  application_simulator_big.cpp  application_simulator_big.hpp
src/docs/: classdiagram.puml
src/main/: main.cpp
src/shm/: shm.cpp  shm_api.cpp  shm_api.hpp
src/test/: test_api.cpp  test_big_packets.cpp  test_loop.cpp
src/udp/: udp_buffer.hpp  udp_package.hpp  udp_payload.hpp  udp_receiver.cpp  udp_sender.cpp
src/util/: timer.cpp
